# cpp_project_template

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
apps/: CMakeLists.txt  app.cpp
apps/app/: CMakeLists.txt  app.cpp
apps/app_name/: CMakeLists.txt  app_name.cpp
apps/tata/: CMakeLists.txt  tata.cpp
docs/: mainpage.md
include/lib/: lib.hpp
include/lib_name/: lib_name.h  lib_name.hpp
include/test_lib/: lib.hpp
include/toto/: toto.h
json/: project_data.json
resources/nsis/: NSIS.definitions.nsh.in
scripts/: app_config.py  app_create.py  create_app.py  create_lib.py  lib_config.py  lib_create.py  reset.py  script_name.py
src/: CMakeLists.txt  lib.cpp
src/lib/: lib.cpp
src/lib_name/: CMakeLists.txt  lib_name.cpp
src/niai/: CMakeLists.txt  niai.cpp
src/toto/: CMakeLists.txt  toto.cpp
tests/: CMakeLists.txt  testlib.cpp
tests/lib/: CMakeLists.txt  testlib.cpp
tests/lib_name/: CMakeLists.txt  test_lib_name.cpp  testlib_name.cpp
tests/toto/: CMakeLists.txt  test_toto.cpp
